[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Scripts/Main/Docks/Card Dock.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 332.142, 90.5178 )

[node name="Dock" type="Area2D"]
input_pickable = false
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 677.0
margin_bottom = 212.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 338.622, 114.277 )
shape = SubResource( 1 )

[node name="LocationCardButton" type="Button" parent="."]
margin_right = 92.0
margin_bottom = 20.0
text = "Location Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstSpot" type="Position2D" parent="."]
position = Vector2( 75, 115 )

[node name="SecondSpot" type="Position2D" parent="."]
position = Vector2( 200, 115 )

[node name="ThirdSpot" type="Position2D" parent="."]
position = Vector2( 325, 115 )

[node name="FourthSpot" type="Position2D" parent="."]
position = Vector2( 450, 115 )

[node name="FifthSpot" type="Position2D" parent="."]
position = Vector2( 575, 115 )

[node name="MonsterCardButton" type="Button" parent="."]
margin_left = 117.654
margin_top = 1.7937
margin_right = 201.654
margin_bottom = 21.7937
text = "Monster Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleCardButton" type="Button" parent="."]
margin_left = 258.747
margin_top = 0.793701
margin_right = 270.747
margin_bottom = 20.7937
text = "Battle Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrategyCardButton" type="Button" parent="."]
margin_left = 388.0
margin_top = 2.0
margin_right = 490.0
margin_bottom = 22.0
text = "Strategy Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationSoundPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationSoundWaitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Dock_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Dock_body_exited"]
[connection signal="pressed" from="LocationCardButton" to="." method="_on_LocationCardButton_pressed"]
[connection signal="pressed" from="MonsterCardButton" to="." method="_on_MonsterCardButton_pressed"]
[connection signal="pressed" from="BattleCardButton" to="." method="_on_BattleCardButton_pressed"]
[connection signal="pressed" from="StrategyCardButton" to="." method="_on_StrategyCardButton_pressed"]
[connection signal="timeout" from="AnimationSoundWaitTimer" to="." method="_on_AnimationSoundWaitTimer_timeout"]
